%% LEGACY: Este diagrama refleja el schema original de Phase 0/1.
%% El schema actual tiene 37+ DbSets. Ver kb-domain-model-v2.md para el modelo vigente.
%% E022 - Diagrama ER completo de Azure SQL - Fase 1
%% Source: docs/architecture/legal-ai-ar-architecture.md sections 4.1 to 4.14
erDiagram
    Sources {
        int Id PK
        string Name
        string FullName
        string BaseUrl
        string Strategy
        bit IsActive
    }

    Rulings {
        uuid Id PK
        int SourceId FK
        string ExternalId
        string AnalysisId
        string ContentHash
        string CaseTitle
        string CaseNumber
        date RulingDate
        int CourtId FK
        string JurisdictionArea
        string Instance
        string Jurisdiction
        string ResourceType
        string RulingDirection
        string SubjectArea
        bit IsUnconstitutional
        string Summary
        string Holding
        string FullText
        string BlobPath
        datetime IndexedAt
        string Status
    }

    Courts {
        int Id PK
        string Name
        string JurisdictionArea
        string Territory
        string Instance
    }

    Judges {
        int Id PK
        string FirstName
        string LastName
        int CurrentCourtId FK
    }

    RulingJudges {
        uuid RulingId FK
        int JudgeId FK
        string ParticipationType
    }

    Keywords {
        int Id PK
        int ExternalCode
        string Description
    }

    RulingKeywords {
        uuid RulingId FK
        int KeywordId FK
        int SortOrder
    }

    Statutes {
        int Id PK
        string Number
        string Name
        string Url
    }

    RulingStatutes {
        uuid RulingId FK
        int StatuteId FK
        string Articles
    }

    Citations {
        int Id PK
        uuid SourceRulingId FK
        uuid TargetRulingId FK
        string ExternalAlias
        int CsjnSummaryId
        string CitationType
    }

    CrawlerConfigs {
        int Id PK
        int SourceId FK
        bit IsEnabled
        string CronExpression
        datetime LastCrawledAt
        string LastCrawledStatus
        int LastDocumentCount
        datetime CreatedAt
        datetime UpdatedAt
    }

    Sources ||--o{ Rulings : "SourceId"
    Sources ||--o{ CrawlerConfigs : "SourceId"
    Courts ||--o{ Rulings : "CourtId"
    Courts ||--o{ Judges : "CurrentCourtId"
    Rulings ||--o{ RulingJudges : "RulingId"
    Judges ||--o{ RulingJudges : "JudgeId"
    Rulings ||--o{ RulingKeywords : "RulingId"
    Keywords ||--o{ RulingKeywords : "KeywordId"
    Rulings ||--o{ RulingStatutes : "RulingId"
    Statutes ||--o{ RulingStatutes : "StatuteId"
    Rulings ||--o{ Citations : "SourceRulingId"
    Rulings ||--o| Citations : "TargetRulingId"
